--- a/FTSDKiOSDemo/Podfile
+++ b/FTSDKiOSDemo/Podfile
@@ -6,5 +6,5 @@ target 'FTSDKiOSDemo' do
   use_frameworks!
 
   # Pods for FTSDKiOSDemo
-   pod 'FTMobileAgent', '~>1.0.0-alpha.14'
+   pod 'FTAutoTrack', '~>1.0.0-alpha.4'
 end
