--- a/FTSDKiOSDemo/.gitignore
+++ b/FTSDKiOSDemo/.gitignore
@@ -29,8 +29,10 @@ DerivedData/
 *.ipa
 *.dSYM.zip
 *.dSYM
+#CocoaPods
+Pods
+Pods/
 
-# CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
