--- a/FTSDKiOSDemo/FTSDKiOSDemo/Info.plist
+++ b/FTSDKiOSDemo/FTSDKiOSDemo/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>使用蓝牙权限</string>
 	<key>NSCameraUsageDescription</key>
